# OS6

./: .gitignore  ~$Р_Колодяжный.docx  ВКР.pptx  ВКР_Колодяжный.docx  ВКР_Колодяжный_Презентация.pptx  Задание_ВКР_бакалавр_Колодяжный[2647][2869].docx  ТекстПрезентация.docx  Титул ВКР_бакалавр.docx
CHAT/: prometheus.sh  prometheus.yml  script.py
CHAT/ASYNC_SERVER_PART/: CMakeLists.txt  Dockerfile  build_script.sh  http_server.cpp  http_server.h  main.cpp  request_handler.cpp  request_handler.h  server.cpp  server.h
CHAT/CLIENT_PART/: CMakeLists.txt  Chat_ru_RU.ts  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatroutine.cpp  chatroutine.h  client.cpp  client.h  client_data.c  client_data.h  client_interface.c  client_interface.cpp  client_interface.h  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  peermanager.cpp  readroutine.cpp  readroutine.h
CHAT/SERVER_PART/: CMakeLists.txt  Dockerfile  build_script.sh  list.c  list.h  logger.cpp  logger.h  proc_comm.c  server.c  server.cpp  server_data.h  server_interface.c  server_interface.cpp  server_interface.h  server_routines.cpp  server_routines.h
CHAT/tester/: CMakeLists.txt  Dockerfile  build_script.sh  logger.h  main.cpp
SENDER_RECEIVER/: msg_receiver.c  msg_sender.c  receiver  sender
SERVER_CLIENT/: cd_dbm.c  clientif.c  cliserv.h  pipe_imp.c  server.c
